# ai_physicist

./: .gitignore  MMLU-Pro_physics_benchmark.py  MMLU-Pro_physics_benchmark_CoT.py  MMLU-Pro_physics_benchmark_RAG.py  MMLU-Pro_physics_benchmark_base.py  MMLU-Pro_physics_question_extractor.py  RAG.py  README.md  UGPhysics_benchmark_base.py  config.py  explore.py  langextract.py  langextract_example.py  latex_renderer.py  models.py  physics_benchmark.py  pyproject.toml  scibench_benchmark_base.py  structuring_question.py
knowledge_base/formulas/: formula_sheet.json
progress_log/: detailed_ai_lit_review.md  log.md  summary_of_ai_lit_review.md
results/MMLU-Pro_benchmarking/: answers_by_question_openai_gpt-oss-20B_20250815_153452.json  answers_by_question_openai_gpt-oss-20B_20250815_153554.json
results/MMLU-Pro_benchmarking/base_model/: answers_by_question_Qwen_Qwen3-32B_20250815_164136.json  answers_by_question_Qwen_Qwen3-32B_20250815_164212.json  answers_by_question_Qwen_Qwen3-32B_20250815_164442.json  answers_by_question_Qwen_Qwen3-32B_20250815_164825.json  answers_by_question_Qwen_Qwen3-32B_20250819_185804.json  answers_by_question_Qwen_Qwen3-32B_20250819_190025.json  answers_by_question_Qwen_Qwen3-32B_20250819_204058.json  answers_by_question_meta-llama_Llama-4-Scout-17B-16E-Instruct_20250817_181318.json  answers_by_question_openai_gpt-oss-20B_20250815_153554.json  answers_by_question_openai_gpt-oss-20B_20250815_160115.json  (+16 more)
results/MMLU-Pro_question_extraction/: extraction_results.jsonl
test_output/: extraction_results.jsonl
