[project]
name = "firstprinciples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.30",
    "langextract>=1.0.8",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.0",
    "transformers>=4.55.0",
]
